--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -19,15 +19,14 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.x'  # Use your desired Python version
+        python-version: '3.x'  # Replace with your preferred Python version
 
-    - name: Install dependencies
+    - name: Install dependencies directly
       run: |
         python -m pip install --upgrade pip
-        pip install gunicorn  # Install Gunicorn
-        pip install -r requirements.txt  # Install other dependencies
+        pip install flask gunicorn  # Install Flask and Gunicorn directly
 
-    - name: Run tests (optional step)
+    - name: Run tests (optional)
       run: |
         pytest  # Replace with your test framework, if applicable
 
